--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ env_logger = "0.11.1"
 log = "0.4.20"
 futures-util = "0.3.30"
 futures-macro = "0.3.30"
+reqwest = { version = "0.11.24", features = ["json"] }
 
 [[bin]]
 name = "all-note"
