--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,10 @@
-DATABASE_URL=postgres://postgres:8281@localhost/postgres
+DATABASE_URL=postgres://kdh@localhost/postgres
+REDIRECT_URL=http://localhost:8080/api/login/google
+CLIENT_ID=
+CLIENT_SECRET=
+
+CLIENT_ORIGIN=http://localhost:3000
+
+JWT_SECRET=
+TOKEN_EXPIRED_IN=60m
+TOKEN_MAXAGE=60
