[FEAT]: google login

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 DATABASE_URL=postgres://kdh@localhost/postgres
-REDIRECT_URL=http://localhost:8080/api/login/google
+REDIRECT_URL=http://localhost:8080/api/auth/google
 CLIENT_ID=
 CLIENT_SECRET=
 
